--- a/logging.yaml
+++ b/logging.yaml
@@ -3,7 +3,8 @@ version: 1
 disable_existing_loggers: True
 formatters:
     simple:
-        format: '%(asctime)s %(name)-26s %(levelname)-8s %(processName)-12s %(message)s'
+        format: '%(asctime)s %(process)-d %(thread)-d %(processName)-12s %(levelname)-8s %(message)s'
+#        format: '%(asctime)s %(name)-26s %(levelname)-8s %(processName)-12s %(message)s'
 
 handlers:
     console:
