added argparser, fixed path in show >processcmd.py: -renaimed queues,                             -prepared for internal delay counters >viewcontrol.py: -added argparser, removed config file                            -added comments                            -minor changes >show.py: -fixed absolute and relative path >logging.yaml: -added thread name to formater >vctool.py: -obsolete, deleted

--- a/logging.yaml
+++ b/logging.yaml
@@ -3,13 +3,13 @@ version: 1
 disable_existing_loggers: True
 formatters:
     simple:
-        format: '%(asctime)s %(process)-d %(thread)-d %(processName)-12s %(levelname)-8s %(message)s'
+        format: '%(asctime)s %(process)-d %(processName)-12s %(thread)-d %(threadName)-21s %(levelname)-8s %(message)s'
 #        format: '%(asctime)s %(name)-26s %(levelname)-8s %(processName)-12s %(message)s'
 
 handlers:
     console:
         class: logging.StreamHandler
-        level: INFO
+        level: DEBUG
         formatter: simple
         stream: ext://sys.stdout
 
