added event system thread
changed one hardcoded key event ("event_key_end") to database defined
updated readme

--- a/logging.yaml
+++ b/logging.yaml
@@ -50,6 +50,6 @@ loggers:
         propagate: no
 
 root:
-    level: DEBUG
+    level: INFO
     handlers: [console, info_file_handler, error_file_handler, debug_file_handler]
 ...
