--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,33 @@
-PyYAML==5.1.2
-python-mpv==0.3.9
-moviepy==1.0.0
-Wand==0.5.7
-SQLAlchemy==1.3.8
 blinker==1.4
+certifi==2019.11.28
+chardet==3.0.4
+Click==7.0
+decorator==4.4.1
+dominate==2.4.0
+Flask==1.1.1
+Flask-Bootstrap==3.3.7.1
+Flask-WTF==0.14.2
+idna==2.8
+imageio==2.6.1
+imageio-ffmpeg==0.3.0
+itsdangerous==1.1.0
+Jinja2==2.10.3
+MarkupSafe==1.1.1
+moviepy==1.0.0
+numpy==1.18.1
+Pillow==7.0.0
+proglog==0.1.9
 pynput==1.4.4
+python-dotenv==0.10.3
+python-mpv==0.3.9
+python-xlib==0.26
+PyYAML==5.1.2
+requests==2.22.0
+six==1.13.0
+SQLAlchemy==1.3.8
+tqdm==4.41.1
+urllib3==1.25.7
+visitor==0.1.3
+Wand==0.5.7
+Werkzeug==0.16.0
+WTForms==2.2.1
