--- a/viewcontrol/data/remotecontrol/behringerx32.yaml
+++ b/viewcontrol/data/remotecontrol/behringerx32.yaml
@@ -12,8 +12,6 @@
       "ON": 1
       "OFF": 0
 
-
-
 - !CommandTemplate
   name: Set Mix Fader Level
   description: Set Fader (01:32) Level 0-1
@@ -31,6 +29,7 @@
   command_composition: '/ch/{0:02d}/mix/on'
   answer_analysis: '/ch/(\d\d)/mix/on'
   argument_mappings:
+    "group": [1,2,3,4,5,6]
     "onoff":
       "ON": 1
       "OFF": 0
