--- a/viewcontrol/data/remotecontrol/behringerx32.yaml
+++ b/viewcontrol/data/remotecontrol/behringerx32.yaml
@@ -1,7 +1,7 @@
 # Partial List of Commands for the Behringer X32 console
 
 - !CommandTemplate
-  name: SetMuteGroup
+  name: Set Mute Group
   description: Set mute group on or off
   request_object: null
   command_composition: '/config/mute/{}'
@@ -29,7 +29,7 @@
   command_composition: '/ch/{0:02d}/mix/on'
   answer_analysis: '/ch/(\d\d)/mix/on'
   argument_mappings:
-    "group": [1,2,3,4,5,6]
+    "group": "int"
     "onoff":
       "ON": 1
       "OFF": 0
@@ -40,7 +40,11 @@
   request_object: '/info'
   command_composition: null
   answer_analysis: '/info'
-  argument_mappings: null
+  argument_mappings:
+    "verison 1": "str"
+    "server type": "str"
+    "model": "str"
+    "verison 2": "str"
 
 - !CommandTemplate
   name: Status
@@ -48,40 +52,15 @@
   request_object: '/status'
   command_composition: null
   answer_analysis: '/status'
-  argument_mappings: null
+  argument_mappings:
+    "status": "str"
+    "ip": "str"
+    "server type": "str"
 
 - !CommandTemplate
   name: XRemote
-  description: null
+  description: ask nicely to recive status changes for next 10 seconds
   request_object: '/xremote'
   command_composition: null
   answer_analysis: null
   argument_mappings: null
-
-- !CommandTemplate
-  name: Set Fader Level
-  description: Set Fader (01:32) Level 0-1
-  request_object: null
-  command_composition: '/ch/{0:02d}/mix/fader'
-  answer_analysis: null
-  argument_mappings:
-    "fader": "int"
-    "level": "float"
-
-
-
-
-- !CommandTemplate
-  name: TestAll
-  description: Displays the status for each input.
-  request_object: null
-  command_composition: '/config/mute/{}'
-  answer_analysis: null
-  argument_mappings:
-    "group": [1,2,3,4,5,6]
-    "onoff":
-      "ON": "ON"
-      "OFF": "OFF"
-    "level": "int"
-    "strings": ["fuu", "bar"]
-
