--- a/viewcontrol/data/remotecontrol/denondn500bd.yaml
+++ b/viewcontrol/data/remotecontrol/denondn500bd.yaml
@@ -1,3 +1,5 @@
+# Partial List of Commands for Deoneo DN-500BD Blu-Ray Player
+
 #4-1-1. Key Control
 
 - !CommandTemplate
@@ -51,15 +53,15 @@
 
 - !CommandTemplate
   name: Track Jump Next
-  description: Track/Chapter Jump Next
+  description: Track/Chapter(BD) Jump Next
   request_object: null
   command_composition: '@02332'
   answer_analysis: null
   argument_mappings: null
 
 - !CommandTemplate
-  name: Track Jump Next
-  description: Track/Chapter Jump Next
+  name: Track Jump Prev
+  description: Track/Chapter(BD) Jump Previous
   request_object: null
   command_composition: '@02333'
   answer_analysis: null
@@ -67,7 +69,7 @@
 
 - !CommandTemplate
   name: Group Jump
-  description: Group/Title Jump | Group Number
+  description: Group/Title(BD)/Folder(USB) Jump
   request_object: null
   command_composition: '@0PCGp{0:04d}'
   answer_analysis: null
@@ -76,15 +78,15 @@
 
 - !CommandTemplate
   name: Group Jump Next
-  description: Group/Title Jump Next
+  description: Group/Title(BD)/Folder(USB) Jump Next
   request_object: null
   command_composition: '@0PCGPNX'
   answer_analysis: null
   argument_mappings: null
 
 - !CommandTemplate
-  name: Group Jump Next
-  description: TGrouprack/Title Jump Next
+  name: Group Jump Prev
+  description: Group/Title(BD)/Folder(USB) Jump Previous
   request_object: null
   command_composition: '@0PCGPPV'
   answer_analysis: null
@@ -92,26 +94,27 @@
 
 - !CommandTemplate
   name: IR Lock
-  description: IR Remote Lock
+  description: IR Remote Lock on/off
   request_object: '@0?PCIRLK'
   command_composition: '@0PCIRLK{}'
   answer_analysis: '@0PCIRLK([0,1]{2})'
   argument_mappings:
-    00: IR Lock On
-    01: IR Lock Off
+    state:
+      IR Lock On: "00"
+      IR Lock Off: "01"
 
 - !CommandTemplate
-  name: TMC
-  description: Time Mode Code
+  name: Time Mode
+  description: Time Mode Code for time on display
   request_object: '@0?PCTMD'
   command_composition: '@0PCTMD{}'
   answer_analysis: '@0PCTMD([A-Z]{2})'  
   argument_mappings:
-    "mode":
-      Ellapsed : EL
-      Remain : RM
-      Total Ellapsed : TL
-      Total Remain : TR
+    mode:
+      Ellapsed: EL
+      Remain: RM
+      Total Ellapsed: TL
+      Total Remain: TR
 
 - !CommandTemplate
   name: Hide OSD
@@ -120,8 +123,9 @@
   command_composition: '@0DVHOSD{}'
   answer_analysis: '@0DVHOSD([0,1]{2})'
   argument_mappings:
-    00: Hide OSD On
-    01: Hide OSD Off
+    mode:
+      Hide OSD On: "00"
+      Hide OSD Off: "01"
 
 - !CommandTemplate
   name: Mute
@@ -130,8 +134,9 @@
   command_composition: '@0mt{}'
   answer_analysis: '@0mt([0,1]{2})'
   argument_mappings:
-    00: Mute On
-    01: Mute Off
+    mode:
+      Mute On: "00"
+      Mute Off: "01"
 
 #4-1-3. Current Status Information
 
@@ -142,12 +147,13 @@
   command_composition: null
   answer_analysis: '@0CD([A-Z]{2})'  
   argument_mappings:
-    NC: No Disk
-    CI: Disk In
-    UF: Unformat
-    TO: Tray Opening
-    TC: Tray Close
-    TE: Tray Error
+    status:
+      No Disk: NC
+      Disk In: CI
+      Unformat: UF
+      Tray Opening: TO
+      Tray Close: TC
+      Tray Error: TE
 
 - !CommandTemplate
   name: Status
@@ -156,18 +162,19 @@
   command_composition: null
   answer_analysis: '@0ST([A-Z]{2,4})'  
   argument_mappings:
-    DVFF: Fast Play Forward
-    DVFR: Fast Play Revers
-    DVFS: FS Play
-    DVHM: Home
-    DVSF: Slow Play Forward
-    DVSP: Step play
-    DVSR: Slow Play Revers
-    DVSU: Setup
-    DVTR: Track Menu
-    ED: Menu
-    PL: Play
-    PP: Pause
+    status:
+      Fast Play Forward: DVFF
+      Fast Play Revers: DVFR
+      FS Play: DVFS
+      Home: DVHM
+      Slow Play Forward: DVSF
+      Step play: DVSP
+      Slow Play Revers: DVSR
+      Setup: DVSU
+      Track Menu: DVTR
+      Menu: ED
+      Play: PL
+      Pause: PP
 
 - !CommandTemplate
   name: Total Track Number
@@ -175,15 +182,17 @@
   request_object: '@0?Tt'
   command_composition: null
   answer_analysis: '@0Tt([0-9]{4}|UNKN)'
-  argument_mappings: null
+  argument_mappings:
+    number: "int"
 
 - !CommandTemplate
   name: Track Number
   description: Track Number
-  request_object: '@0?Tt'
+  request_object: '@0?Tr'
   command_composition: null
   answer_analysis: '@0Tr([0-9]{4}|UNKN)'
-  argument_mappings: null
+  argument_mappings:
+    number: "int"
 
 - !CommandTemplate
   name: Total Group Number
@@ -191,7 +200,8 @@
   request_object: '@0?PCTG'
   command_composition: null
   answer_analysis: '@0PCTG([0-9]{4}|UNKN)'
-  argument_mappings: null
+  argument_mappings:
+    number: "int"
 
 - !CommandTemplate
   name: Group Number
@@ -199,28 +209,33 @@
   request_object: '@0?PCGp'
   command_composition: null
   answer_analysis: '@0PCGp([0-9]{4}|UNKN)'
-  argument_mappings: null
+  argument_mappings:
+    number: "int"
+
+
+
+# according to data sheet this is expected: @0RMhhhmmss, @0EThhhmmss
+# no command identifies before these responses. since those are supposedly not send as
+# status messages, only as request, this can be compensated.
 
 - !CommandTemplate
   name: Elapse Time
   description: Elapse Time
   request_object: '@0?ET'
   command_composition: null
-  answer_analysis: '@0ET([0-9]{3})([0-9]{2})([0-9]{2})'
-  argument_mappings: null
+  answer_analysis: 'ack+([0-9]{3})([0-9]{2})([0-9]{2})'
+  argument_mappings:
+    hour: "int"
+    minute: "int"
+    second: "int"
 
 - !CommandTemplate
   name: Remain Time
   description: Remain Time
   request_object: '@0?RM'
   command_composition: null
-  answer_analysis: '@0RM([0-9]{3})([0-9]{2})([0-9]{2})'
-  argument_mappings: null
-
-- !CommandTemplate
-  name: Time hhh mm ss
-  description: Time of @0?ET or @0?RT
-  request_object: null
-  command_composition: null
-  answer_analysis: '([0-9]{3})([0-9]{2})([0-9]{2})'
-  argument_mappings: null
+  answer_analysis: 'ack+([0-9]{3})([0-9]{2})([0-9]{2})'
+  argument_mappings:
+    hour: "int"
+    minute: "int"
+    second: "int"
