--- a/viewcontrol/data/remotecontrol/denondn500bd.yaml
+++ b/viewcontrol/data/remotecontrol/denondn500bd.yaml
@@ -5,7 +5,7 @@
 - !CommandTemplate
   name: PowerOn
   description: Power On
-  request_object: null
+  request_composition: null
   answer_analysis: '@0PW00'
   command_composition: '@0PW00'
   argument_mappings: null
@@ -13,7 +13,7 @@
 - !CommandTemplate
   name: PowerOff
   description: Power Off
-  request_object: null
+  request_composition: null
   answer_analysis: '@0PW01'
   command_composition: '@0PW01'
   argument_mappings: null
@@ -21,7 +21,7 @@
 - !CommandTemplate
   name: Stop
   description: Stop
-  request_object: null
+  request_composition: null
   command_composition: '@02354'
   answer_analysis: '@02354'
   argument_mappings: null
@@ -29,7 +29,7 @@
 - !CommandTemplate
   name: Play
   description: Play
-  request_object: null
+  request_composition: null
   command_composition: '@02353'
   answer_analysis: '@02353'
   argument_mappings: null
@@ -37,7 +37,7 @@
 - !CommandTemplate
   name: Pause
   description: Play Pause
-  request_object: null
+  request_composition: null
   command_composition: '@02348'
   answer_analysis: '@02348'
   argument_mappings: null
@@ -45,7 +45,7 @@
 - !CommandTemplate
   name: Track Jump
   description: Track/Chapter Jump
-  request_object: null
+  request_composition: null
   command_composition: '@0Tr{0:04d}'  
   answer_analysis:  null
   argument_mappings:
@@ -54,7 +54,7 @@
 - !CommandTemplate
   name: Track Jump Next
   description: Track/Chapter(BD) Jump Next
-  request_object: null
+  request_composition: null
   command_composition: '@02332'
   answer_analysis: null
   argument_mappings: null
@@ -62,7 +62,7 @@
 - !CommandTemplate
   name: Track Jump Prev
   description: Track/Chapter(BD) Jump Previous
-  request_object: null
+  request_composition: null
   command_composition: '@02333'
   answer_analysis: null
   argument_mappings: null
@@ -70,7 +70,7 @@
 - !CommandTemplate
   name: Group Jump
   description: Group/Title(BD)/Folder(USB) Jump
-  request_object: null
+  request_composition: null
   command_composition: '@0PCGp{0:04d}'
   answer_analysis: null
   argument_mappings:
@@ -79,7 +79,7 @@
 - !CommandTemplate
   name: Group Jump Next
   description: Group/Title(BD)/Folder(USB) Jump Next
-  request_object: null
+  request_composition: null
   command_composition: '@0PCGPNX'
   answer_analysis: null
   argument_mappings: null
@@ -87,7 +87,7 @@
 - !CommandTemplate
   name: Group Jump Prev
   description: Group/Title(BD)/Folder(USB) Jump Previous
-  request_object: null
+  request_composition: null
   command_composition: '@0PCGPPV'
   answer_analysis: null
   argument_mappings: null
@@ -95,7 +95,7 @@
 - !CommandTemplate
   name: IR Lock
   description: IR Remote Lock on/off
-  request_object: '@0?PCIRLK'
+  request_composition: '@0?PCIRLK'
   command_composition: '@0PCIRLK{}'
   answer_analysis: '@0PCIRLK([0,1]{2})'
   argument_mappings:
@@ -106,7 +106,7 @@
 - !CommandTemplate
   name: Time Mode
   description: Time Mode Code for time on display
-  request_object: '@0?PCTMD'
+  request_composition: '@0?PCTMD'
   command_composition: '@0PCTMD{}'
   answer_analysis: '@0PCTMD([A-Z]{2})'  
   argument_mappings:
@@ -119,7 +119,7 @@
 - !CommandTemplate
   name: Hide OSD
   description: Complete hiding of the icon displayed on the screen.
-  request_object: '@0?DVHOSD'
+  request_composition: '@0?DVHOSD'
   command_composition: '@0DVHOSD{}'
   answer_analysis: '@0DVHOSD([0,1]{2})'
   argument_mappings:
@@ -130,7 +130,7 @@
 - !CommandTemplate
   name: Mute
   description: Play
-  request_object: '@0?mt'
+  request_composition: '@0?mt'
   command_composition: '@0mt{}'
   answer_analysis: '@0mt([0,1]{2})'
   argument_mappings:
@@ -143,7 +143,7 @@
 - !CommandTemplate
   name: Media Status
   description: Media Status
-  request_object: '@0?CD'
+  request_composition: '@0?CD'
   command_composition: null
   answer_analysis: '@0CD([A-Z]{2})'  
   argument_mappings:
@@ -158,7 +158,7 @@
 - !CommandTemplate
   name: Status
   description: Status
-  request_object: '@0?ST'
+  request_composition: '@0?ST'
   command_composition: null
   answer_analysis: '@0ST([A-Z]{2,4})'  
   argument_mappings:
@@ -179,7 +179,7 @@
 - !CommandTemplate
   name: Total Track Number
   description: Total Track Number
-  request_object: '@0?Tt'
+  request_composition: '@0?Tt'
   command_composition: null
   answer_analysis: '@0Tt([0-9]{4}|UNKN)'
   argument_mappings:
@@ -188,7 +188,7 @@
 - !CommandTemplate
   name: Track Number
   description: Track Number
-  request_object: '@0?Tr'
+  request_composition: '@0?Tr'
   command_composition: null
   answer_analysis: '@0Tr([0-9]{4}|UNKN)'
   argument_mappings:
@@ -197,7 +197,7 @@
 - !CommandTemplate
   name: Total Group Number
   description: Group Number
-  request_object: '@0?PCTG'
+  request_composition: '@0?PCTG'
   command_composition: null
   answer_analysis: '@0PCTG([0-9]{4}|UNKN)'
   argument_mappings:
@@ -206,7 +206,7 @@
 - !CommandTemplate
   name: Group Number
   description: Group Number
-  request_object: '@0?PCGp'
+  request_composition: '@0?PCGp'
   command_composition: null
   answer_analysis: '@0PCGp([0-9]{4}|UNKN)'
   argument_mappings:
@@ -221,7 +221,7 @@
 - !CommandTemplate
   name: Elapse Time
   description: Elapse Time
-  request_object: '@0?ET'
+  request_composition: '@0?ET'
   command_composition: null
   answer_analysis: 'ack+([0-9]{3})([0-9]{2})([0-9]{2})'
   argument_mappings:
@@ -232,7 +232,7 @@
 - !CommandTemplate
   name: Remain Time
   description: Remain Time
-  request_object: '@0?RM'
+  request_composition: '@0?RM'
   command_composition: null
   answer_analysis: 'ack+([0-9]{3})([0-9]{2})([0-9]{2})'
   argument_mappings:
