improved processmpv, added player_next, bugfixes
- completely rewrote timer module to be cleaner and more
  functional, especially for repeating timers
  tested attribute to argument passing in new pytest file

- added support to skip a media element or rather call
  the next one. StillElements are now displayed indefinitely
  and only one timer exists which will call the next element
  when it has run out. This timer also sends the dummy time-pos
  messages to main process. Updated docs.

- updated threadcommunicationbase.py to have connection,
  to be consistent with process starting function and adapted
  child classes to it

- changed device creation in processcmd.py and DeviceOptions to
  work only with connection tuples which is consistent with
  testools and makes everything simpler

- added python-osc to setup.py and tox min

- added viewcontrol.png to git
  important resource missing since commit
  53c6c2043227a1fd45d775814ad651cdeed91396

--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ deps =
     min: moviepy==1.0.0
     min: Wand==0.5.7
     min: blinker==1.4
+    min: python-osc==1.7.0
 
 commands =
     pytest --no-load --ignore=test/test_devices.py
